--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -9,6 +9,10 @@
         flex: 1;
         opacity: 0.7;
 
+        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+            min-height: 150px;
+        }
+
         &:hover {
             cursor: pointer;
             opacity: 0.9;
